--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to the Sinatra Template!</h1>
+<h1>Welcome to Blockbuster!</h1>
+<h3><a href="/login">Login</a></h3>
+<h3><a href="/register">Register</a></h3>
 
