--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -9,6 +9,6 @@
 </ul>
 
 <form method='POST' action="/members">
-<input type="checkbox" name="member[movie_ids][]" id="movie_<%= @movie.id %>" value="<%=@movie.id%>">
+<input type="checkbox" name="member[movie_id][]" id="movie_<%= @movie.id %>" value="<%=@movie.id%>">
 <input type='submit' value='submit'>
 </form>
