changed member to user

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,10 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
+
+    <link rel="icon" href="/public/images/tab.png">
   </head>
   <body>
     <div class="wrapper">
-
+  
         <%= yield %>
 
       <footer class="branding">
