--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,6 +4,7 @@
 <ul>
     <%@user.movies.each do |movie|%>
     <li><a href="/movies/<%=movie.slug%>"><%= movie.title %></a> <br> Directed by <%= movie.director %> <br> year: <%= movie.year %> format: <%= movie.format %> <br>
+    <a href="/return/<%=movie.id%>">Return Movie</a>
     <% end %>  
     </li>
 </ul> <br>
