--- a/app/views/movies/new.erb
+++ b/app/views/movies/new.erb
@@ -3,15 +3,19 @@
     <li>Directed by <%= @movie.director %></li>
     <li>year: <%= @movie.year %></li>
     <li>formats:</li>
-    <li>VHS quantity available: <%= @movie.vhs_count %></li>
-    <li>DVD quantity available: <%= @movie.dvd_count %></li>
+    <li>VHS quantity available: <%= @vhs ? @vhs.inventory : flash[:message]  %></li>
+    <li>DVD quantity available: <%= @dvd ? @dvd.inventory : 0 %></li>
 </ul>
 
 <h3>VHS</h3> 
-<form method='POST' action="//">
+<form method='POST' action="/movies">
+<% if @vhs %>
 <input type="checkbox" name="user[movie_ids][]" id="movie_<%= @vhs.id %>" value="<%=@vhs.id%>"><br>
+<% end %>
 <h3>DVD</h3>
+<% if @dvd %>
 <input type="checkbox" name="user[movie_ids][]" id="movie_<%= @dvd.id %>" value="<%=@dvd.id%>"> <br>
+<% end %>
 <input type='submit' value='submit'>
 </form>
 
