--- a/app/views/reviews/show.erb
+++ b/app/views/reviews/show.erb
@@ -2,4 +2,4 @@
     <%= review.rating %>
     <%= review.comment %>
 <% end %>
-<a href="/reviews/<%=current_user.slug%>/new">Leave a Review</a>
+<a href="/reviews/<%=current_user.slug%>">Leave a Review</a>
