added logged_in? method to all routes

--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -17,4 +17,4 @@
 <input type="submit" value="Delete Review">
 </form>
 
-<a href="/movies/<%= @review.movie.title %>">Cancel</a>
+<a href="/movies/<%= @review.movie.slug %>">Cancel</a>
