--- a/app/views/reviews/new.erb
+++ b/app/views/reviews/new.erb
@@ -1,6 +1,6 @@
 <form method='POST' action='/reviews/<%= @movie.slug %>'>
 <label for='user_comment'>Leave your thoughts and opinions below, but no one cares</label> <br>
-<input type='textarea' name='comment' id='user_comment'> <br><br>
+<input type='textarea' name='comment' id='user_comment' rows='8' cols='70'> <br><br>
 <label for='rating'>How many gold stars does this movie get?</label>
 <select id="rating" name="rating">
     <option value="1">One Star</option>
