--- a/app/views/movies/index.erb
+++ b/app/views/movies/index.erb
@@ -1,7 +1,5 @@
-
+<h2>Movies</h2>
 <% @movies.each do |movie| %>
-<ul>
-    <li><a href="/movies/<%=movie.slug%>"><%= movie.title %></a></li>
-</ul>
+    <a href="/movies/<%=movie.slug%>"><%= movie.title %></a> <br> <br>
 <% end %>
 
