--- a/app/views/movies/return.erb
+++ b/app/views/movies/return.erb
@@ -1,8 +1,11 @@
+<h3>Select the movies you want to return</h3>
 <form method='POST' action='/return'>
 <input type='hidden' id='hidden' name='_method' value='PATCH'>
 <% @user.movies.each do |movie|%>
 <label><%=movie.title%> Format: <%= movie.format %></label>
 <input type='checkbox' name='user[movie_ids][]' id='movie_<%=movie.id%>' value='<%=movie.id%>'> <br>
-<%end%>
-<input type='submit' value='submit'>
-</form>
+<%end%> <br>
+<input type='submit' value='return'>
+</form> <br>
+
+<a href="users/<%= @user.slug %>">Homepage</a>
