--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -1,7 +1,7 @@
 <form method='POST' action="/reviews/<%=@review.id%>">
 <input type="hidden" id="hidden" name="_method" value="patch">
 <label for="user_comment">Review:</label><br>
-<input type="text" id="user_comment" name="comment" value="<%= @review.comment %>"> <br>
+<input type="textarea" cols='70' rows='8' id="user_comment" name="comment" value="<%= @review.comment %>"> <br>
 <label for='rating'>How many gold stars does this movie get?</label> <br>
 <select id="rating" name="rating">
     <option value="1">One Star</option>
@@ -9,12 +9,15 @@
     <option value="3">Three Star</option>
     <option value="4">Four Star</option>
   </select>
-</form> <br>
 <input type="submit" value="submit">
+</form> <br>
+
 
 <form method="POST" action="/reviews/<%=@review.id%>/delete">
 <input type="hidden" id="hidden" name="_method" value="DELETE">
 <input type="submit" value="Delete Review">
 </form>
+
+
 
 <a href="/movies/<%= @review.movie.slug %>">Cancel</a>
