--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -1,13 +1,44 @@
-<h1>Welcome <%= @user.name %></h1>
-
-<h3>You have <%= @user.movies.count %> movies currently rented</h3>
+<h1><%= @movie.title %></h1>
 <ul>
-    <%@user.movies.each do |movie|%>
-    <li><a href="/movies/<%=movie.slug%>"><%= movie.title %></a> <br> Directed by <%= movie.director %> <br> year: <%= movie.year %> format: <%= movie.format %> <br>
-    <% end %>  
-    </li>
-</ul> <br>
-<a href="/movies">Rent More Movies</a> <br><br>
-<a href='/return'>Return Movies</a> <br><br>
+    <li>Directed by <%= @movie.director %></li>
+    <li>year: <%= @movie.year %></li>
+    <li>formats:</li>
+    <li>VHS quantity available: <%= @vhs ? @vhs.inventory : flash[:message]  %></li>
+    <li>DVD quantity available: <%= @dvd ? @dvd.inventory : 0 %></li>
+</ul>
 
-<a href='/logout'>logout</a>
+<h3>VHS</h3> 
+<form method='POST' action="/movies">
+<% if @vhs %>
+<input type="checkbox" name="user[movie_ids][]" id="movie_<%= @vhs.id %>" value="<%=@vhs.id%>"><br>
+<% end %>
+<h3>DVD</h3>
+<% if @dvd %>
+<input type="checkbox" name="user[movie_ids][]" id="movie_<%= @dvd.id %>" value="<%=@dvd.id%>"> <br>
+<% end %>
+<input type='submit' value='submit'>
+</form> <br>
+
+<h4>Reviews</h4>
+<% if flash[:error] %>
+   <br> <%= flash[:error] %> <br> <br>
+<% end %>
+
+<% Movie.all.each do |movie| %>
+    <% if movie.title == @movie.title %>
+        <% movie.reviews.each do |review| %>
+            <h4><%= review.user.username %></h4>
+            <p>
+               Rating: <%= review.rating %> Stars <br>
+               Review: <%= review.comment %><br>
+               <a href="/reviews/<%=review.id%>/edit">Edit Review</a> 
+            </p>    
+            <% end %>
+    <% end %>
+<% end %> <br> <br>
+
+<a href='/reviews/new/<%= @movie.slug %>'>Leave a Review</a><br>
+
+<a href="/movies">Other Movies</a><br>
+
+<a href="/">Homepage</a>
