--- a/app/views/reviews/edit.erb
+++ b/app/views/reviews/edit.erb
@@ -1,7 +1,7 @@
 <form method='POST' action="/reviews/<%=@review.id%>">
 <input type="hidden" id="hidden" name="_method" value="patch">
 <label for="user_comment">Review:</label><br>
-<input type="textarea" cols='70' rows='8' id="user_comment" name="comment" value="<%= @review.comment %>"> <br>
+<textarea cols='70' rows='8' id="user_comment" name="comment" value="<%= @review.comment %>"> <%= @review.comment %> </textarea> <br>
 <label for='rating'>How many gold stars does this movie get?</label> <br>
 <select id="rating" name="rating">
     <option value="1">One Star</option>
