--- a/app/views/movies/show.erb
+++ b/app/views/movies/show.erb
@@ -19,7 +19,7 @@
 <input type='submit' value='submit'>
 </form> <br>
 
-<h4>Reviews</h4>
+<h4>Reviews</h4> <br>
 <% if flash[:error] %>
    <br> <%= flash[:error] %> <br> <br>
 <% end %>
